--- a/notebooks/NB5_beta_correlations.ipynb
+++ b/notebooks/NB5_beta_correlations.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -134,6 +134,7 @@
    ],
    "source": [
     "from statannotations.Annotator import Annotator\n",
+    "import scipy\n",
     "\n",
     "dx=\"comparison\"; dy=\"r2\"; dhue = \"event\"; ort=\"v\"; pal = \"Set2\"; sigma = .15\n",
     "hue_order = ['Inter-annotations', 'JUMP', 'HIT', 'Kill', 'HealthLoss']\n",
@@ -162,41 +163,231 @@
     "\n",
     "# Build the pairs\n",
     "pairs = []\n",
+    "#pairs.append(('intra-subject','inter-subject'))\n",
     "for comp in np.unique(plot_df.comparison):\n",
     "    for event in np.unique(plot_df.event):\n",
     "        if event != 'Inter-annotations':\n",
     "            pairs.append(((comp, event), (comp, 'Inter-annotations')))\n",
     "\n",
-    "#pairs = [('Inter-annotations','JUMP')]\n",
     "annotator = Annotator(ax, pairs, data=plot_df, x=dx, y=dy, hue=dhue, hue_order=hue_order)\n",
+    "#ttest_ind = scipy.stats.ttest_ind()\n",
     "annotator.configure(test='t-test_ind', text_format='star', loc='outside', comparisons_correction='bonf')\n",
-    "annotator.apply_and_annotate();"
+    "annotator.apply_and_annotate();\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"8\" halign=\"left\">r2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>comparison</th>\n",
+       "      <th>event</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">inter-subject</th>\n",
+       "      <th>HIT</th>\n",
+       "      <td>758.0</td>\n",
+       "      <td>0.267842</td>\n",
+       "      <td>0.126030</td>\n",
+       "      <td>-0.050839</td>\n",
+       "      <td>0.179896</td>\n",
+       "      <td>0.284719</td>\n",
+       "      <td>0.363573</td>\n",
+       "      <td>0.510339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HealthLoss</th>\n",
+       "      <td>690.0</td>\n",
+       "      <td>0.102274</td>\n",
+       "      <td>0.087803</td>\n",
+       "      <td>-0.137120</td>\n",
+       "      <td>0.039314</td>\n",
+       "      <td>0.101064</td>\n",
+       "      <td>0.157205</td>\n",
+       "      <td>0.402989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inter-annotations</th>\n",
+       "      <td>8892.0</td>\n",
+       "      <td>0.143951</td>\n",
+       "      <td>0.126887</td>\n",
+       "      <td>-0.297863</td>\n",
+       "      <td>0.051434</td>\n",
+       "      <td>0.136924</td>\n",
+       "      <td>0.231197</td>\n",
+       "      <td>0.492398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JUMP</th>\n",
+       "      <td>758.0</td>\n",
+       "      <td>0.201408</td>\n",
+       "      <td>0.086092</td>\n",
+       "      <td>-0.149792</td>\n",
+       "      <td>0.145765</td>\n",
+       "      <td>0.207011</td>\n",
+       "      <td>0.267103</td>\n",
+       "      <td>0.439098</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kill</th>\n",
+       "      <td>758.0</td>\n",
+       "      <td>0.271012</td>\n",
+       "      <td>0.129717</td>\n",
+       "      <td>-0.152150</td>\n",
+       "      <td>0.188375</td>\n",
+       "      <td>0.272724</td>\n",
+       "      <td>0.378209</td>\n",
+       "      <td>0.544196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">intra-subject</th>\n",
+       "      <th>HIT</th>\n",
+       "      <td>232.0</td>\n",
+       "      <td>0.587270</td>\n",
+       "      <td>0.168513</td>\n",
+       "      <td>-0.028245</td>\n",
+       "      <td>0.501882</td>\n",
+       "      <td>0.606977</td>\n",
+       "      <td>0.707961</td>\n",
+       "      <td>0.838509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HealthLoss</th>\n",
+       "      <td>213.0</td>\n",
+       "      <td>0.262116</td>\n",
+       "      <td>0.152073</td>\n",
+       "      <td>-0.051364</td>\n",
+       "      <td>0.145341</td>\n",
+       "      <td>0.260923</td>\n",
+       "      <td>0.361070</td>\n",
+       "      <td>0.649011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Inter-annotations</th>\n",
+       "      <td>2988.0</td>\n",
+       "      <td>0.254243</td>\n",
+       "      <td>0.194822</td>\n",
+       "      <td>-0.323383</td>\n",
+       "      <td>0.116343</td>\n",
+       "      <td>0.245640</td>\n",
+       "      <td>0.362677</td>\n",
+       "      <td>0.890337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>JUMP</th>\n",
+       "      <td>232.0</td>\n",
+       "      <td>0.430333</td>\n",
+       "      <td>0.166004</td>\n",
+       "      <td>-0.088479</td>\n",
+       "      <td>0.336017</td>\n",
+       "      <td>0.459803</td>\n",
+       "      <td>0.552000</td>\n",
+       "      <td>0.720917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kill</th>\n",
+       "      <td>232.0</td>\n",
+       "      <td>0.585412</td>\n",
+       "      <td>0.181933</td>\n",
+       "      <td>-0.178742</td>\n",
+       "      <td>0.468377</td>\n",
+       "      <td>0.628975</td>\n",
+       "      <td>0.720863</td>\n",
+       "      <td>0.859297</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[<statannotations.Annotation.Annotation at 0x7fc70bba8128>,\n",
-       " <statannotations.Annotation.Annotation at 0x7fc70bba8160>,\n",
-       " <statannotations.Annotation.Annotation at 0x7fc70bba8ac8>,\n",
-       " <statannotations.Annotation.Annotation at 0x7fc70bba8c88>,\n",
-       " <statannotations.Annotation.Annotation at 0x7fc70bba8390>,\n",
-       " <statannotations.Annotation.Annotation at 0x7fc70bba8630>,\n",
-       " <statannotations.Annotation.Annotation at 0x7fc70bba88d0>,\n",
-       " <statannotations.Annotation.Annotation at 0x7fc70bba8e80>]"
+       "                                     r2                                \\\n",
+       "                                  count      mean       std       min   \n",
+       "comparison    event                                                     \n",
+       "inter-subject HIT                 758.0  0.267842  0.126030 -0.050839   \n",
+       "              HealthLoss          690.0  0.102274  0.087803 -0.137120   \n",
+       "              Inter-annotations  8892.0  0.143951  0.126887 -0.297863   \n",
+       "              JUMP                758.0  0.201408  0.086092 -0.149792   \n",
+       "              Kill                758.0  0.271012  0.129717 -0.152150   \n",
+       "intra-subject HIT                 232.0  0.587270  0.168513 -0.028245   \n",
+       "              HealthLoss          213.0  0.262116  0.152073 -0.051364   \n",
+       "              Inter-annotations  2988.0  0.254243  0.194822 -0.323383   \n",
+       "              JUMP                232.0  0.430333  0.166004 -0.088479   \n",
+       "              Kill                232.0  0.585412  0.181933 -0.178742   \n",
+       "\n",
+       "                                                                         \n",
+       "                                      25%       50%       75%       max  \n",
+       "comparison    event                                                      \n",
+       "inter-subject HIT                0.179896  0.284719  0.363573  0.510339  \n",
+       "              HealthLoss         0.039314  0.101064  0.157205  0.402989  \n",
+       "              Inter-annotations  0.051434  0.136924  0.231197  0.492398  \n",
+       "              JUMP               0.145765  0.207011  0.267103  0.439098  \n",
+       "              Kill               0.188375  0.272724  0.378209  0.544196  \n",
+       "intra-subject HIT                0.501882  0.606977  0.707961  0.838509  \n",
+       "              HealthLoss         0.145341  0.260923  0.361070  0.649011  \n",
+       "              Inter-annotations  0.116343  0.245640  0.362677  0.890337  \n",
+       "              JUMP               0.336017  0.459803  0.552000  0.720917  \n",
+       "              Kill               0.468377  0.628975  0.720863  0.859297  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "plot_df.groupby(['comparison', 'event']).describe()"
+   ]
   },
   {
    "cell_type": "code",
