more fontsize increases

--- a/notebooks/NB3_regressors_correlations.ipynb
+++ b/notebooks/NB3_regressors_correlations.ipynb
@@ -240,10 +240,12 @@
     "import matplotlib.gridspec as gridspec\n",
     "import seaborn as sns\n",
     "\n",
-    "fig = plt.figure(figsize=(15, 10))\n",
+    "fig = plt.figure(figsize=(20, 15), dpi=300)\n",
     "gs = gridspec.GridSpec(2, 3, width_ratios=[1, 1, 0.06])\n",
     "\n",
     "ax_cbar = fig.add_subplot(gs[:,-1])\n",
+    "ax_cbar.tick_params(labelsize=14)\n",
+    "\n",
     "axes = np.array([[fig.add_subplot(gs[row, col]) for col in range(gs._ncols-1)] for row in range(gs._nrows)]).ravel()\n",
     "#ax_cbar.set_label('R')\n",
     "for subj_idx, subject in enumerate(np.unique(df.subject)):\n",
@@ -254,10 +256,14 @@
     "    mask[np.tril_indices_from(mask)] = False\n",
     "    sns.heatmap(data_to_plot, vmin=-1, vmax=1, annot=True,\n",
     "                ax=axes[subj_idx], cbar=True, cbar_ax=ax_cbar, \n",
-    "                cmap='coolwarm', annot_kws={\"fontsize\": 12},\n",
+    "                cmap='coolwarm', annot_kws={\"fontsize\": 14},\n",
     "                xticklabels=columns, yticklabels=columns, mask=mask)\n",
-    "    axes[subj_idx].set_title(f'{subject}', fontsize=16)\n",
-    "    \n",
+    "    axes[subj_idx].set_title(f'{subject}', fontsize=18)\n",
+    "    # Set font size and rotation for xticklabels\n",
+    "    plt.setp(axes[subj_idx].get_xticklabels(), rotation=45, ha='right', fontsize=14)\n",
+    "\n",
+    "    # Set font size for yticklabels\n",
+    "    plt.setp(axes[subj_idx].get_yticklabels(), fontsize=14)\n",
     "    \n",
     "\n",
     "plt.tight_layout()"
