added stars to mvpa results graph

--- a/notebooks/NB6_MVPA_decoding.ipynb
+++ b/notebooks/NB6_MVPA_decoding.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "e84f2605",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4138/2180098856.py:174: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.\n",
+      "/tmp/ipykernel_67964/2180098856.py:174: UserWarning: This figure includes Axes that are not compatible with tight_layout, so results might be incorrect.\n",
       "  plt.tight_layout()\n"
      ]
     },
@@ -528,6 +528,64 @@
     "df, p_values = prepare_data()\n",
     "fig = create_plot(df, p_values)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "35e27e69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'DOWN': 0.4166666666666667,\n",
+       " 'HIT': 0.75,\n",
+       " 'HealthLoss': 0.4166666666666667,\n",
+       " 'JUMP': 0.5833333333333334,\n",
+       " 'Kill': 0.6666666666666666,\n",
+       " 'LEFT': 0.0,\n",
+       " 'RIGHT': 0.6666666666666666,\n",
+       " 'cue': 0.26666666666666666,\n",
+       " 'effects_interest': 0.8666666666666667,\n",
+       " 'face': 0.8571428571428571,\n",
+       " 'face-shape': 0.14285714285714285,\n",
+       " 'left_foot': 0.8666666666666667,\n",
+       " 'left_foot-avg': 0.0,\n",
+       " 'left_hand': 0.5333333333333333,\n",
+       " 'left_hand-avg': 0.0,\n",
+       " 'match': 0.2857142857142857,\n",
+       " 'math': 0.8571428571428571,\n",
+       " 'math-story': 0.35714285714285715,\n",
+       " 'mental': 0.5333333333333333,\n",
+       " 'mental-random': 0.2,\n",
+       " 'punishment': 0.06666666666666667,\n",
+       " 'punishment-reward': 0.0,\n",
+       " 'random': 0.4,\n",
+       " 'relational': 0.7142857142857143,\n",
+       " 'relational-match': 0.5714285714285714,\n",
+       " 'reward': 0.4,\n",
+       " 'reward-punishment': 0.0,\n",
+       " 'right_foot': 0.9333333333333333,\n",
+       " 'right_foot-avg': 0.0,\n",
+       " 'right_hand': 0.5333333333333333,\n",
+       " 'right_hand-avg': 0.0,\n",
+       " 'shape': 0.9285714285714286,\n",
+       " 'shape-face': 0.21428571428571427,\n",
+       " 'story': 0.7142857142857143,\n",
+       " 'story-math': 0.21428571428571427,\n",
+       " 'tongue': 0.6,\n",
+       " 'tongue-avg': 0.0}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = load_decoder_data('sub-01')\n",
+    "data[2]\n"
    ]
   },
   {
