--- a/notebooks/NB3_regressors_correlations.ipynb
+++ b/notebooks/NB3_regressors_correlations.ipynb
@@ -1230,7 +1230,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "shinobi",
+   "display_name": "shinobi_env",
    "language": "python",
    "name": "python3"
   },
@@ -1244,7 +1244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
