--- a/notebooks/behav_tables.ipynb
+++ b/notebooks/behav_tables.ipynb
@@ -1807,7 +1807,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "shinobi",
    "language": "python",
    "name": "python3"
   },
@@ -1821,7 +1821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
