--- a/notebooks/NB1_behav_tables.ipynb
+++ b/notebooks/NB1_behav_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "66968fdd",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e7676a83",
    "metadata": {
     "scrolled": true
@@ -52,14 +52,6 @@
    "outputs": [],
    "source": [
     "def get_behav_df(replayfile_list):\n",
-    "    sub_list = []\n",
-    "    run_list = []\n",
-    "    ses_list = []\n",
-    "    duration_dict = []\n",
-    "    clear_dict = []\n",
-    "    kill_dict = []\n",
-    "    healthloss_dict = []\n",
-    "\n",
     "    data_dict = {\"subject\":[],\n",
     "                \"session\":[],\n",
     "                \"run\":[],\n",
@@ -90,13 +82,13 @@
     "    return data_df\n",
     "\n",
     "\n",
-    "replayfile_list = sorted(glob.glob(op.join(DATA_PATH, \"shinobi_released\", \"shinobi\", \"*\", \"*\", \"*\", \"*.bk2\")))\n",
+    "replayfile_list = sorted(glob.glob(op.join('/media/hyruuk/cneuromod_data/shinobi_data', \"shinobi\", \"*\", \"*\", \"*\", \"*.bk2\")))\n",
     "data_df = get_behav_df(replayfile_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "1547e66c",
    "metadata": {},
    "outputs": [
@@ -133,17 +125,174 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ses-002</td>\n",
+       "      <td>gamelogs</td>\n",
+       "      <td>01</td>\n",
+       "      <td>level 1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>164.800000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ses-002</td>\n",
+       "      <td>gamelogs</td>\n",
+       "      <td>01</td>\n",
+       "      <td>level 1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>170.116667</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ses-002</td>\n",
+       "      <td>gamelogs</td>\n",
+       "      <td>01</td>\n",
+       "      <td>level 4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>159.083333</td>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ses-002</td>\n",
+       "      <td>gamelogs</td>\n",
+       "      <td>01</td>\n",
+       "      <td>level 5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>150.900000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ses-002</td>\n",
+       "      <td>gamelogs</td>\n",
+       "      <td>02</td>\n",
+       "      <td>level 1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>162.616667</td>\n",
+       "      <td>1</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>675</th>\n",
+       "      <td>ses-013</td>\n",
+       "      <td>gamelogs</td>\n",
+       "      <td>04</td>\n",
+       "      <td>level 1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>215.133333</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>676</th>\n",
+       "      <td>ses-013</td>\n",
+       "      <td>gamelogs</td>\n",
+       "      <td>04</td>\n",
+       "      <td>level 4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>217.333333</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>677</th>\n",
+       "      <td>ses-013</td>\n",
+       "      <td>gamelogs</td>\n",
+       "      <td>04</td>\n",
+       "      <td>level 5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>208.350000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678</th>\n",
+       "      <td>ses-013</td>\n",
+       "      <td>gamelogs</td>\n",
+       "      <td>05</td>\n",
+       "      <td>level 1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>219.133333</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>679</th>\n",
+       "      <td>ses-013</td>\n",
+       "      <td>gamelogs</td>\n",
+       "      <td>05</td>\n",
+       "      <td>level 4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>227.100000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>680 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [subject, session, run, level, N, duration (h:m:s), cleared, kills, healthlosses]\n",
-       "Index: []"
+       "     subject   session run    level  N  duration (h:m:s)  cleared  kills  \\\n",
+       "0    ses-002  gamelogs  01  level 1  1        164.800000        1     29   \n",
+       "1    ses-002  gamelogs  01  level 1  1        170.116667        1     28   \n",
+       "2    ses-002  gamelogs  01  level 4  1        159.083333        1     13   \n",
+       "3    ses-002  gamelogs  01  level 5  1        150.900000        1     34   \n",
+       "4    ses-002  gamelogs  02  level 1  1        162.616667        1     28   \n",
+       "..       ...       ...  ..      ... ..               ...      ...    ...   \n",
+       "675  ses-013  gamelogs  04  level 1  1        215.133333        1     34   \n",
+       "676  ses-013  gamelogs  04  level 4  1        217.333333        0     22   \n",
+       "677  ses-013  gamelogs  04  level 5  1        208.350000        1     40   \n",
+       "678  ses-013  gamelogs  05  level 1  1        219.133333        1     34   \n",
+       "679  ses-013  gamelogs  05  level 4  1        227.100000        1     25   \n",
+       "\n",
+       "     healthlosses  \n",
+       "0               5  \n",
+       "1               1  \n",
+       "2               2  \n",
+       "3               1  \n",
+       "4               1  \n",
+       "..            ...  \n",
+       "675             0  \n",
+       "676             0  \n",
+       "677             1  \n",
+       "678             0  \n",
+       "679             0  \n",
+       "\n",
+       "[680 rows x 9 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,7 +1895,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "shinobi_env",
+   "display_name": "shinobi",
    "language": "python",
    "name": "python3"
   },
@@ -1760,7 +1909,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.8.17"
   }
  },
  "nbformat": 4,
